fixed gap on footer mobile

--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -60,6 +60,13 @@
   }
   
 }
+@media screen and (max-width: 360px) {
+  .footer-wrapper{
+    column-gap: 0px !important;
+
+  }
+  
+}
 
 
 @media screen and (max-width: 991px) {
